force text to be white

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -1,6 +1,9 @@
 window {
     background-color: black;
 }
+#center_label, #unlocked_instructions_label {
+    color: white;
+}
 #center_label {
     font-size: 40px;
 }
